sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.error
AlgSelectionSort:23: error: ')' expected but '}' found.
    }
    ^