sort.basic.lessons.sort.basic.selection.AlgSelectionSort.scala.code
def selectionSort() {
  var lgr=getNombreValeurs() 
  var minimum=0
  var compteur=0
  var caseMinimum=0
  
  for (i<-0 to lgr-1){
    
    minimum=getValeur(i)
    
    compteur=i
   
    while (compteur<lgr){
      
      if (plusPetit(compteur,minimum==true ){
        
      	minimum=getValeur(compteur)
      }
     
      compteur=compteur+1

    }
    
    (caseMinimum,i)
  }
}